# pickleml.c

./: .gitignore
python/: convert_mnist.py  models.py  train_mnist.py  train_quickdraw.py  train_quickdraw_dinov2.py
src/: CMakeLists.txt  test_mnist.c
src/pickleml/: pickleml.c  pickleml.h
